<resources>
    <string name="app_name">OffiCient</string>
    <string name="andrew_id_prompt">Andrew ID</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_register">Register now</string>
    <string name="prompt_email">Email</string>
    <string name="alternative_email">Alternative email address</string>
    <string name="prompt_phone_number">Phone number</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prof_edit">EDIT PROFILE</string>
    <string name="add_course">ADD COURSE</string>
    <string name="add_ass">ADD ASSIGNMENT</string>
    <string name="prompt_password_confirmation">Confirm Password</string>
    <string name="integrity_notice">By clicking on the <b>Register</b> button, you confirm that the information that you provided is accurate and true.</string>
    <string name="prompt_registration">Register now</string>
    <string name="confirm_faculty">Please input the confirmation code that we sent to %s@andrew.cmu.edu to proceed. </string>
    <string name="action_sign_in">Log in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="or">OR</string>
    <string name="title_activity_registration">Registration</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="thanks_for_registrating">Thanks you for registering in OffiCient. You can start using the application :).</string>
    <string name="open_now">Open Now</string>
    <string name="congratulations">Congratulations</string>
    <string name="title_activity_courses_list">CoursesList</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="statistics">Statistics</string>
    <string name="profile">Profile</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_add_course">Add Course</string>
    <string name="course_code_prompt">Course Code</string>
    <string name="course_title_prompt">Course Title</string>
    <string name="assign_title_prompt">Assignment Title</string>
    <string name="expected_prompt">Expected Time (in hours)</string>
    <string name="due_time_prompt">Due Time</string>
    <string name="select_course_prompt">Select Course </string>
    <string name="available_time_prompt">Available Till</string>
    <string name="term_prompt">Term Prompt</string>
    <string name="action_add_course">Add Course</string>
    <string name="action_add_assignment">Add Assignment</string>
    <string name="scan_QR_Image">Scan QR Image via email</string>
    <string name="Send_QR_Image_to_Email">Share QR Image </string>
    <string name="title_activity_test_activiy">TestActiviy</string>
    <string name="started_at">Started: %s</string>
    <string name="stop">Stop</string>
    <string name="no_tasks">You don\'t seem to have started a task now. Please go to the Home page and scan a QR code to start monitoring.</string>
    <string name="ongoing_tasks">Ongoing Tasks</string>
    <string name="class_prompt">Choose a Class</string>
    <string name="sign_out">Sign out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prefs_file_name">xyz_details</string>
    <string name="invalid_qr_code">The code that you scanned is not valid.</string>
    <string name="course_details_label">Course details</string>
    <string name="send_code_via_email">Send to my email</string>
    <string name="finish">Finish</string>
    <string name="object_title"><b>Title</b>: %s</string>
    <string name="object_code"><b>Code</b>: %s</string>
    <string name="term_title"><b>Term</b>: %s</string>
    <string name="modify">Modify</string>
    <string name="no_courses">You don\'t seem to have a class now. Please add or register to classes to start.</string>
    <string name="instructors_count">%d instructors</string>
    <string name="office_hours_count">%d office hours</string>
    <string name="network_unavailable">Unable to connect to the network</string>
    <string name="data_empty">Empty data retrieved.</string>

    <string name="label_name">Name</string>
    <string name="change_pwd_notice">Create a new password</string>
    <string name="update">update</string>
    <string name="done">done</string>
    <string name="edit">edit</string>
    <string name="click_on_edit_btn">Click on Edit button to edit</string>
    <string name="taught_by">Taught by %s</string>
    <string name="enroll">Enroll in</string>
    <string name="add_assignment">Create assignment</string>
    <string name="add_office_hours">Add office hours</string>
    <string name="add_ta">Add Teaching Assistant</string>
    <string name="view_statistics">View statistics</string>
    <string name="tmpl_course_name">%s - %s</string>
    <string name="tas">Teaching Assistants</string>
    <string name="office_hours">Office Hours</string>
    <string name="assignments">Assignments</string>
    <string name="select_ta">Choose a Teaching Assistant</string>
    <string name="pick_student">Pick a student/alumni</string>
    <string name="oh_day_hours">%s, %s - %s</string>
    <string name="due_on">Due on %s</string>
    <string name="no_data">Nothing available here yet.</string>
    <string name="loading">Loading</string>
    <string name="assignment_details">Assignment Details</string>
    <string name="add_oh">Office Hours</string>
    <string name="course_desc">Course Description</string>
    <string name="start_oh">Start Time</string>
    <string name="date_format">%4d-%02d-%02d</string>
    <string name="hour_format"> %02d:%02d:%02d</string>
    <string name="successfully_added">Data has been added.</string>
    <string name="venue">Venue</string>
    <string name="end_time">End Time</string>
    <string name="input_andrewId">Input the Andrew ID</string>
    <string name="assignment_title">Title: %s</string>
    <string name="object_deadline">Deadline: %s</string>
    <string name="object_desc">Description: %s</string>
    <string name="oh_holder">Enseignant: %s</string>
    <string name="time_and_venue">Held on: %s - <b>%s</b></string>
    <string name="details">Details</string>
    <string name="courses">Courses</string>

</resources>
