<?xml version="1.0" encoding="utf-8"?>
<!--    /*-->
<!--    *-->
<!--    *  * @author Solange Iyubu-->
<!--    *  * AndrewID : siyubu-->
<!--    *  * Program : ECE-->
<!--    *  *-->
<!--    *  * On my honor, as a Carnegie-Mellon Africa student, I have neither given nor received unauthorized assistance on this work.-->
<!--    *-->
<!--    */-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prof_edit"
        android:textSize="26sp"
        android:textStyle="bold"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_name" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/changeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter your name" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_email" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/changeEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter your email" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/textAltEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alt_email" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/enterAltEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/textpaswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_password" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/changePswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="(Leave this empty to keep the old one)" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="100dp" />

        <Button
            android:id="@+id/canc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:layout_marginLeft="40dp" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu" />

</LinearLayout>