<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.users.SuccessfulRegistration">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/logo_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <ImageView
        android:id="@+id/partly_complete_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/check"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/logo_bottom_guideline" />

    <ImageView
        android:id="@+id/success_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/success"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/logo_bottom_guideline"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/faculty_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp"
        app:layout_constraintTop_toBottomOf="@id/partly_complete_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_faculty"/>
        <EditText
            android:id="@+id/code_entry"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_gravity="start" />
        <Button
            android:id="@+id/confirm_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/submit"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/success_notification"
        android:layout_width="match_parent"
        android:padding="24dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/partly_complete_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congratulations"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thanks_for_registrating"
            android:textAlignment="center" />
        <Button
            android:id="@+id/start_application"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_now"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_marginTop="20dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>