<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * @author Segla Boladji Vinny Trinite Adjibi
  ~  * AndrewID : vadjibi
  ~  * Program : MSIT
  ~  *
  ~  * On my honor, as a Carnegie-Mellon Africa student, I have neither given nor received unauthorized assistance on this work.
  ~  */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingBottom="40dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/courses_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/courses"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingBottom="10dp"/>
    <Spinner
        android:id="@+id/courses_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/courses_label"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingBottom="20dp"/>

    <Button
        android:id="@+id/submit_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/primary_button_background"
        app:layout_constraintTop_toBottomOf="@id/courses_selection"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:enabled="false"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>